# anticorruption-ai

./: .gitignore  CLAUDE.md  CONTEXT.md  pyproject.toml
docs/adr/: 0001-duckdb-datastore-graphs-in-python.md  0002-capas-raw-core.md  0003-core-desnormalizado-mas-maestras.md  0004-identidad-contratista-sin-fuzzy.md  0005-contratos-unificados-fuente-escalar.md
docs/agents/: domain.md  issue-tracker.md
docs/metrics/: capa-metrics.md
docs/research/: cruces-rues-sanciones.md  fuentes-datos-contratacion-colombia.md  proponentes-grupos-datasets.md  red-flags-contratacion.md  seleccion-ambito-piloto.md
docs/research/assets/seleccion-ambito-piloto/: analyze.py  analyze2.py  metrics.json  metrics2.json
prototypes/secop-duckdb-sample/: .gitignore  REPORT.md  ingest_sample.py  metrics.json
src/secop/: cli.py  datasets.py  ingest.py  metrics.py  socrata.py  transform.py  umbrales.json  verify.py
tests/: conftest.py  test_ingest.py  test_metrics.py  test_nit.py  test_socrata.py  test_transform.py
